--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+quinn = "0.11.9"
+rcgen = "0.14.6"
+rustls = { version = "0.23.36", features = ["aws-lc-rs"] }
+tokio = { version = "1.49.0", features = ["full"] }
